app/styles/styles.css
/* ... */
div.current-refinements-container.closed {
  overflow: hidden;
}

div.clear-refinements-container {
  margin-top: 1em;
  margin-bottom: 1em;
  display: inline-flex;
  width: 12%;
}

div.more-refinements {
  padding: 0.6em;
}

div.ais-ClearRefinements button, div.more-refinements button {
  padding: 0.25em;
  border-radius: 4px;
  font-size: 1.2em;
  white-space: nowrap;
  color: #fff;
  background-color: #3C439B;
}

div.search-accordion-container div.search-accordion-content div.ais-CurrentRefinements ul li, div.search-accordion-container div.search-accordion-content div.ais-CurrentRefinements ul label, div.search-accordion-container div.search-accordion-content div.ais-CurrentRefinements ul span {
  font-size: 2em;
}

/*hide the 'container' label containing facets for a particular field*/
ul.ais-CurrentRefinements-list li span.ais-CurrentRefinements-label {
  display: none;
}

ul.ais-RefinementList-list {
  padding-inline-start: 0;
  margin-block-start: 0;
}

ul.ais-RefinementList-list, ul.ais-CurrentRefinements-list {
  list-style-type: none;
}

ul.ais-RefinementList-list li {
  margin-top: 0.2em;
}

ul.ais-CurrentRefinements-list li span.ais-CurrentRefinements-category {
  margin-right: 2em;
  margin-bottom: 1em;
  padding-top: 0.5em;
  padding-left: 0.5em;
  display: inline-flex;
  vertical-align: middle;
  background-color: #fff;
  font-size: 1.1em;
  height: 2em;
  border: 1px solid rgba(101, 105, 170);
}

span.ais-CurrentRefinements-category span.ais-CurrentRefinements-categoryLabel, span.ais-CurrentRefinements-category button.ais-CurrentRefinements-delete {
  color: rgba(101, 105, 170);
}

ul.ais-CurrentRefinements-list li {
  display: inline;
}

ul.ais-CurrentRefinements-list li:first-child {
  margin-left: 2em;
}

span.ais-CurrentRefinements-category {
  line-height: 1.2em;
}

span.ais-CurrentRefinements-category button {
  background-color: transparent;
  margin-left: 1em;
  margin-bottom: 1em;
  border: none;
}

span.ais-RefinementList-labelText {
  margin-left: 0.5em;
}

/*search accordion*/
div.search-accordion-container {
  margin-bottom: 2em;
}
h4.search-accordion-title {
  color: rgba(74, 78, 156);
  font-weight: bold;
}

div.search-accordion-container div.search-accordion-content {
  display: none;
}

div.search-accordion-container div.search-accordion-content.open {
  display: block;
}

div.search-accordion-container svg {
  display: inline;
  vertical-align: middle;
}

div.ais-SearchBox form button.ais-SearchBox-submit, div.ais-SearchBox form button.ais-SearchBox-reset {

}
 
div.ais-SearchBox form, div.ais-SearchBox form input {
  position: relative;
  left: -0.1em;
  width: 80%;
  padding: 0.25em;
 }

 div.ais-SearchBox form button {
  display: none;
 }

input.sidebar-search  {
  width: 90%;
  height: 1em;
  padding: 0.25em;
}

div.score-light {
  margin-right: 1em;
  display: inline-block;
  border: 1px solid #ddd;
  min-height: 1em;
  min-width: 1em;
  height: 1em;
  width: 1em;
}


/* pages  */
div.page-container {
  width: 90%;
  margin-left: 4em;
  margin-right: 4em;
  position: relative;
  z-index: 5;
}



/*nice item*/
div.nice-items-container {
  display: block;
}

div.nice-items-wrapper {
  display: inline-flex;
  flex-wrap: wrap;
  gap: 1em;
}



div.nice-item {
  border-radius: 8px;
  overflow: hidden;
  position: relative;
}

div.nice-item:hover {
  outline: 2px solid rgba(53, 59, 144);
}

div.nice-item h2 {
  color: #fff;
  min-height: 2em;
  font-size: 1em;
  padding-top: 0.5em;
  background-color: #000;
  text-align: center;
  position: absolute;
  width: 100%;
  bottom: 0;
}

div.nice-item, div.nice-item img {
  width: 11.9em;
  min-height: 11.9em;
  height: 11.9em;
}

div.nice-item img {
  background-position: center;
  object-fit: cover;
}

div.items-search input {
  height: 2em;
  width: 33%;
}

/*title of whole page*/
/*div.skinny-body-container.title h2 {
  background-color: #d2d5e2;
  padding: 1em;
  margin-bottom: 2em;
}
*/


div.skinny-body-container h2 {
  font-size: 1.2em;
}

div.page-container div.sidey-body-container.exhibit-title {
  width: 100%;
  align-items: center;
  vertical-align: middle;
}

div.page-container div.sidey-body-container.exhibit-title div.exhibit-top-container {
  width: 100%;
  display: inline-flex;
  overflow-x: hidden;
}

div.page-container div.sidey-body-container.exhibit-title div.exhibit-top-container h2 {
/*  background-color: #E4C9FF;*/
/*  background-color: #CD9CFF;*/
/*  background-color: #e6cce9;*/
  border-radius: 8px 8px 0px 0px;
  padding: 2em;
  width: 30%;
}

div.page-container div.sidey-body-container.exhibit-title div.exhibit-top-container img {
  margin-left: 4em;
  margin-right: 4em;

  margin-left: auto;
  margin-right: auto;

  padding-top: 2em;
  padding-bottom: 2em;
  width: 40%;
  aspect-ratio: 4/3;
  object-fit: cover;
}

div.exhibit-title div.exhibit-top-container {
  background-color: #f9f9f9;
}

div.exhibit-title div.exhibit-top-slice-container {
  border-radius: 8px 8px 0px 0px;
}

div.exhibit-title div.exhibit-top-back-link-container {
  border-radius: 0px 0px 8px 8px;
}

div.exhibit-title div.exhibit-top-back-link-container, div.exhibit-title div.exhibit-top-slice-container {
  padding: 0.5em;
  background-color: #F2D7F5;
}

a.exhibit-top-back-link {
  text-decoration: none;
  margin-left: 75%;
  margin-right: auto;
  border-radius: 8px;
  width: 24%;
  padding: 1em;
  display: block;
  font-size: 0.65em;
}


div.page-container div.skinny-body-container.collection-title {
  display: inline-flex;
}

div.page-container div.skinny-body-container.collection-search div {
  margin-left: auto;
  margin-right: auto;
  width: 75%;
}

div.collection-image-container, div.collection-title-container {
  width: 50%;
  aspect-ratio: 1/1;
  text-align: center;
  vertical-align: middle;
  overflow: hidden;
}

div.collection-title-container h2 {
  width: 100%;
  padding-top: 40%;
  margin-left: 2em;
}

div.collection-image-container img {
  width: 100%;
  aspect-ratio: 1/1;
  object-fit: contain;
}
/* ... */

